# RadeonProRender-Baikal

./: CMakeLists.txt
Baikal/Controllers/: clw_scene_controller.cpp
Baikal/Estimators/: path_tracing_estimator.cpp
Baikal/Kernels/CL/: fill_aovs_uberv2.cl  fill_aovs_uberv2_old.cl  monte_carlo_renderer.cl  path_tracing_estimator_uberv2.cl  payload.cl  texture.cl
Baikal/Renderers/: monte_carlo_renderer.cpp
Baikal/Utils/: cl_inputmap_generator.cpp  cl_program.cpp  cl_uberv2_generator.cpp  clw_class.h
BaikalIO/: image_io.cpp  material_io.cpp  scene_obj_io.cpp
BaikalStandalone/Application/: app_utils.cpp  app_utils.h  application.cpp  application.h  cl_render.cpp  cl_render.h
BaikalTest/: basic.h
Rpr/: RadeonProRender.cpp
Rpr/WrapObject/Materials/: ArithmeticMaterialObject.cpp  ArithmeticMaterialObject.h  ImageMaterialObject.cpp  ImageMaterialObject.h  MaterialObject.cpp  MaterialObject.h  TextureMaterialObject.cpp  TextureMaterialObject.h
RprIO/: CMakeLists.txt  RadeonProRenderIO.cpp  RadeonProRenderIO.h  material_io.cpp  material_io.h  scene_fbx_io.cpp  scene_gltf_io.cpp  scene_io.h  scene_obj_io.cpp  scene_test_io.cpp
RprTest/: CMakeLists.txt  basic.h
Tools/MaterialConverter/: main.cpp  material_converter.cpp  material_converter.h
VS2017/Baikal/: embed_kernels.h
VS2017/RadeonRays/RadeonRays/: kernels_cl.h
run/: fill_aovs_uberv210148.cl  fill_aovs_uberv225829.cl  fill_aovs_uberv2621401.cl  fill_aovs_uberv2621452.cl  fill_aovs_uberv2_g.cl  fill_aovs_uberv2_ng.cl  monte_carlo_renderer10329.cl  path_tracing_estimator10330.cl  path_tracing_estimator25801.cl  path_tracing_estimator26191.cl  path_tracing_estimator621311.cl  path_tracing_estimator_uberv210349.cl  path_tracing_estimator_uberv225812.cl  path_tracing_estimator_uberv226192.cl  path_tracing_estimator_uberv2621314.cl
